--- a/package.json
+++ b/package.json
@@ -9,17 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^3.0.7",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@types/react-syntax-highlighter": "^15.5.7",
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
+    "formik": "^2.4.5",
+    "graphql": "^16.8.1",
+    "graphql-request": "^6.1.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "next": "13.5.2",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-syntax-highlighter": "^15.5.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "yup": "^1.3.0"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.199"
   }
 }
