--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "yup": "^1.3.0"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.199"
+    "@types/lodash": "^4.14.199",
+    "encoding": "^0.1.13"
   }
 }
