--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@portabletext/react": "^3.0.7",
+    "@sendgrid/mail": "^8.1.1",
     "@tailwindcss/typography": "^0.5.10",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
