--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "yup": "^1.3.0"
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.1",
     "@types/lodash": "^4.14.199",
     "encoding": "^0.1.13"
   }
